# lib

./: README.md
Arduino/StopWatch/: StopWatch.ino
Arduino/Temperature/: Compile_log.txt  Temperature.ino
NodeMcu/Display/: .LCD.ino.swp  Display.ino
NodeMcu/IRTestRecv/: IRTestRecv.ino
NodeMcu/PT100S/: PT100S.ino
NodeMcu/gsheet/: gsheet.gs  gsheet.ino  gsheet_cpy.txt
NodeMcu/ifttt_waterpump/: .ifttt_light.ino.swp  .ifttt_waterpump.ino.swp  ifttt_waterpump.ino
NodeMcu/inc/: plants.h
NodeMcu/ir/: ir.ino
NodeMcu/seg7/: seg7.ino
NodeMcu/wifi_led/: wifi_led.ino
OpenCV/sub/: .CMakeLists.txt.swp  .sub.cpp.swp  CMakeLists.txt  sub.cpp
OpenCV/v4l2_api_rgb_ir/: CMakeLists.txt  Makefile  v4l2_camera.cpp  while.sh
OpenCV/v4l2_api_y16/: CMakeLists.txt  Makefile  StepstobuildApplication.txt  v4l2_camera.cpp
OpenCV/v4l2_userptr_uyvy/: CMakeLists.txt  StepstobuildApplication.txt  v4l2_camera.cpp
OpenGL/: make_command.sh  objrender.c
OpenGL/examples/: Makefile  cube.c  cube_en.c  lightlab.c  mjkwarp.c  texture.c  triangle.c
Processor/memaccess/: make_command.sh  (+2 more)
SDL/: Makefile  commands.txt  sdl.c  sdl_latency_test.c
TempPT100/: TempPT100.ino
libcvt/: Makefile  commands.txt  resize.c  resize_stitch.c  resize_yuyv_yuv420_stitch.c  rotate.c  sample.yuv  test.sh  yuyv_interlace_yuyv_progressive.c  yuyv_to_yuv420.c  yuyv_to_yuv420_opt.c
libcvtcuda/: Makefile  resize.cu  resize.h  resize_stitch.cu  resize_yuyv_yuv420_stitch.cu  yuv_yuv420.h  yuyv_yuv420.cu
libcvtneon/: Makefile  uyvy_yuyv_neon.c  yuyv_nv12_neon.c  yuyv_yuv420_neon.c
v4l2/: capture.c
(+93 files in other folders)
