cmake_minimum_required(VERSION 2.8)
project( v4l2_camera )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( v4l2_camera v4l2_camera.cpp )
target_link_libraries( v4l2_camera ${OpenCV_LIBS} )
